--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-    <button id="date-button">August 4, 2024</button>
+    <button id="date-button">Click Here</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script>
